RMagick 1.3.0
    o Added Image#strip!, Image#import_pixels, Image#export_pixels,
      Image#random_channel_threshold for IM 5.5.8, and
      Image#black_threshold and Image#white_threshold for IM 5.5.7
    o Changed configure to generate top-level Makefile with install,
      uninstall targets. (Thanks to Bob Friesenhahn for the suggestion
      and original implementation.)
    o Incorporated 1.2.2 patch for bugs that occurred when building RMagick
      with Ruby 1.6.7
    o Added "magick_location" r/o attribute to the ImageMagickError class
    o Tested with ImageMagick 5.5.8
    o Tested with GraphicsMagick 1.0.2
    o Tested with Ruby 1.8.0preview3
    o Changed to MIT license

RMagick 1.2.2
    o Fixed many bugs in configuration script
    o Added support for GraphicsMagick 1.0 (with assistance from Bob Friesenhahn)
    o Changed default documentation directory (--doc-dir option default) to
      $prefix/share/RMagick
    o Added "examples" directory to contain example programs that aren't
      referenced by the documentation

RMagick 1.2.1
    o Yet another fix to the Cygwin installation procedure

RMagick 1.2.0
    o Changed install to work correctly on Cygwin
      (Cygwin testing by Yuki Hirakawa and David Martinez Garcia.)
    o Changed install to support Gentoo ebuild
      (Gentoo support provided by Tom Payne.)
    o Changed configure script to find IM doc in IM 5.5.7
    o Added Image#capture
    o Added optional matte_pct argument to Image#colorize
    o Add default argument values to Image#gaussian_blur
    o Fix bug in Image#store_pixels that prevented it from working with
      GIF and other PseudoClass image formats
    o Changed Image#crop and Image#crop! to accept a GravityType constant
      as the first argument, instead of the x- and y-offset arguments.
      (Suggested by Robert Wagner.)
    o Added Image::Info#filename=, image_type=
    o Added ImageList#__map__ as an alias for Enumerable#map