@@ -17,6 +17,7 @@ Magick++
 	continue reading sources
 
 Next release
+  GM's "IMAGE" coder?
 
 Immediate (!) forms
     transparent
