@@ -503,8 +503,10 @@
       </tr>
       <tr class="method">
         <td class="methodname"><a name=
-        "Image.format">format</a></td>
-        <td><i>image.</i>format -&gt; <i>aString</i></td>
+        "Image.format">format</a><br>
+         format=</td>
+        <td><i>image.</i>format -&gt; <i>aString</i><br>
+         <i>image.</i>format = <i>aString</i></td>
       </tr>
       <tr>
         <td>&nbsp;</td>
