@@ -2,6 +2,9 @@ RMagick 1.3.0
     o Added Image#strip!, Image#import_pixels, Image#export_pixels,
       Image#random_channel_threshold for IM 5.5.8, and
       Image#black_threshold and Image#white_threshold for IM 5.5.7
+    o Added Image#format=
+    o Enhance Image#read, Image#write, ImageList#read, ImageList#write
+      to accept an open File object as well as a filename.
     o Changed configure to generate top-level Makefile with install,
       uninstall targets. (Thanks to Bob Friesenhahn for the suggestion
       and original implementation.)
